Fix T38774: Added missing notifier flags for updating F-Curve after changing extrapolation from RNA